Fix minor typo in specification.tex

--- a/specification.tex
+++ b/specification.tex
@@ -175,7 +175,7 @@ language range.
 \end{quote}
 
 The use of XML bloats the files by a huge magnitude and doesn't provide
-a efficient encoding, thus a lot of websites and applications ship files
+an efficient encoding, thus a lot of websites and applications ship files
 that are not encoded optimally. Also, SVG allows several ways of
 achieving the same thing, and can be seen more as an intermediate format
 for editing as for final encoding.
